--- a/customer.yml
+++ b/customer.yml
@@ -1,4 +1,4 @@
-saludo: "Hola desde Git"
+saludo: "Hola desde Git Customer"
 spring.datasource.url: "jdbc:h2:mem:testdb"
 spring.datasource.driverClassName: "org.h2.Driver"
 spring.datasource.username: "ooma"
