--- a/card.yml
+++ b/card.yml
@@ -11,4 +11,4 @@ eureka.client.serviceURL.defaultZone: "http://localhost:9991/eureka"
 eureka.instance.prefer-ip-address: "true"
 eureka.client.register-with-eureka: "true"
 eureka.client.fetch-registry: "true"
-eureka.server.enableSelfPreservation: false
+eureka.server.enableSelfPreservation: "false"
