--- a/zuul.yml
+++ b/zuul.yml
@@ -1,4 +1,4 @@
-saludo: "Hola desde Git Customer"
+saludo: "Hola desde Git Zuul"
 spring.datasource.url: "jdbc:h2:mem:testdb"
 spring.datasource.driverClassName: "org.h2.Driver"
 spring.datasource.username: "ooma"
